<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/preferencias_usuario"
            android:id="@+id/tvTitle"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp" android:textSize="30sp" android:textStyle="bold"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/codigo_cidade"
            android:id="@+id/tvCodCidade"
            android:layout_below="@+id/tvTitle"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtCodCidade"
            android:layout_below="@+id/tvCodCidade"
            android:layout_alignParentLeft="true"
            android:inputType="number"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/codigo_operadora"
            android:id="@+id/tvCodOperadora"
            android:layout_below="@+id/edtCodCidade"
            android:layout_marginRight="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtCodOperadora"
            android:layout_below="@+id/tvCodOperadora"
            android:inputType="number"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/edtCodCidade"
            android:layout_alignEnd="@+id/edtCodCidade" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:id="@+id/btnSalvar"
            android:layout_below="@+id/edtCodOperadora"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_alignRight="@+id/edtCodOperadora"
            android:layout_alignEnd="@+id/edtCodOperadora" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/btnCancelar"
            android:layout_below="@+id/btnSalvar"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_alignRight="@+id/btnSalvar"
            android:layout_alignEnd="@+id/btnSalvar" />

</RelativeLayout>